--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -492,7 +492,7 @@ chorus:
     proxy:
         base_url: https://chorus.ai
     docs: https://docs.nango.dev/integrations/all/chorus
-circle:
+circle-so:
     categories:
         - communication
     auth_mode: API_KEY
@@ -500,7 +500,7 @@ circle:
         base_url: https://app.circle.so
         headers:
             Authorization: Token ${apiKey}
-    docs: https://docs.nango.dev/integrations/all/circle
+    docs: https://docs.nango.dev/integrations/all/circle-so
 clari-copilot:
     auth_mode: API_KEY
     proxy:
