fix(integrations): add siteId to sync response

--- a/integration-templates/sharepoint-online/nango.yaml
+++ b/integration-templates/sharepoint-online/nango.yaml
@@ -36,6 +36,7 @@ integrations:
                 version: 1.0.0
 models:
     FileMetadata:
+        siteId: string
         id: string
         name: string
         etag: string
