--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1125,7 +1125,7 @@ gong-oauth:
     disable_pkce: true
     token_request_auth_method: basic
     proxy:
-        base_url: ${connectionConfig.api_base_url_for_customer}
+        base_url: ${connectionConfig.api_base_url_for_customer} || https://api.gong.io
     docs: https://docs.nango.dev/integrations/all/gong
 google:
     auth_mode: OAUTH2
