--- a/integration-templates/sharepoint-online/nango.yaml
+++ b/integration-templates/sharepoint-online/nango.yaml
@@ -33,9 +33,10 @@ integrations:
                 input: SharePointMetadata
                 auto_start: false
                 output: FileMetadata
-                version: 1.0.0
+                version: 1.0.1
 models:
     FileMetadata:
+        siteId: string
         id: string
         name: string
         etag: string
