--- a/packages/shared/flows.yaml
+++ b/packages/shared/flows.yaml
@@ -3143,9 +3143,10 @@ integrations:
                 input: SharePointMetadata
                 auto_start: false
                 output: FileMetadata
-                version: 1.0.0
+                version: 1.0.1
         models:
             FileMetadata:
+                siteId: string
                 id: string
                 name: string
                 etag: string
