--- a/packages/runner/package.json
+++ b/packages/runner/package.json
@@ -27,6 +27,7 @@
         "connect-timeout": "^1.9.0",
         "dd-trace": "5.2.0",
         "express": "^4.19.2",
+        "soap": "1.1.1",
         "superjson": "^2.2.1",
         "undici": "6.12.0",
         "zod": "^3.22.4"
