--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2213,7 +2213,7 @@ podium:
         grant_type: authorization_code
     refresh_params:
         grant_type: refresh_token
-    expires_in_mins: 600
+    expires_in_ms: 36000000
     proxy:
         headers:
             Podium-Version: ${connectionConfig.apiVersion}
