--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2870,6 +2870,23 @@ trello:
     proxy:
         base_url: https://api.trello.com
     docs: https://docs.nango.dev/integrations/all/trello
+tsheetsteam:
+    categories:
+        - payroll
+        - hr
+        - productivity
+    auth_mode: OAUTH2
+    authorization_url: https://rest.tsheets.com/api/v1/authorize
+    token_url: https://rest.tsheets.com/api/v1/grant
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    proxy:
+        base_url: https://rest.tsheets.com/api/v1
+    docs: https://docs.nango.dev/integrations/all/tsheetsteam
 todoist:
     categories:
         - productivity
