--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2200,6 +2200,30 @@ pivotaltracker:
             method: GET
             endpoint: /accounts
     docs: https://docs.nango.dev/integrations/all/pivotaltracker
+podium:
+    categories:
+        - communication
+        - marketing
+    auth_mode: OAUTH2
+    authorization_url: https://api.podium.com/oauth/authorize
+    token_url: https://api.podium.com/oauth/token
+    scope_separator: ' '
+    body_format: json
+    authorization_params:
+        response_type: code
+    token_params:
+        grant_type: authorization_code
+    refresh_params:
+        grant_type: refresh_token
+    expires_in_ms: 36000000
+    proxy:
+        headers:
+            Podium-Version: ${connectionConfig.apiVersion}
+            Content-Type: application/json
+        base_url: https://api.podium.com
+        retry:
+            after: 'x-ratelimit-reset'
+    docs: https://docs.nango.dev/integrations/all/podium
 posthog:
     categories:
         - dev-tools
