fix(env): clarify auth flag

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,7 @@ WORKER_PORT=3004
 #
 NANGO_SERVER_URL=http://localhost:3003
 CSP_REPORT_ONLY=false
+# FLAG_AUTH_ENABLED=false
 #
 #
 # - Configure server websockets path (current value is the default for running Nango locally).
