--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -3071,6 +3071,7 @@ unanet:
 unauthenticated:
     auth_mode: NONE
     docs: https://docs.nango.dev/integrations/overview
+    webhook_routing_script: unauthenticatedWebhookRouting
 vimeo:
     categories:
         - video
