feat(integrations): add salesforce-experience-cloud provider (#2592)
## Describe your changes

## Issue ticket number and link

## Checklist before requesting a review (skip if just adding/editing
APIs & templates)
- [x] I added tests, otherwise the reason is: 
- [x] I added observability, otherwise the reason is:
- [x] I added analytics, otherwise the reason is:

---------

Co-authored-by: vladimir.gorobets <vladimir.gorobets@wildix.com>
Co-authored-by: Samuel Bodin <1637651+bodinsamuel@users.noreply.github.com>

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -2393,6 +2393,17 @@ salesforce-sandbox:
     proxy:
         base_url: ${connectionConfig.instance_url}
     docs: https://docs.nango.dev/integrations/all/salesforce
+salesforce-experience-cloud:
+    auth_mode: OAUTH2
+    authorization_url: https://${connectionConfig.subdomain}.my.site.com/services/oauth2/authorize
+    token_url: https://${connectionConfig.subdomain}.my.site.com/services/oauth2/token
+    default_scopes:
+        - offline_access
+    token_response_metadata:
+        - instance_url
+    proxy:
+        base_url: ${connectionConfig.instance_url}
+    docs: https://docs.nango.dev/integrations/all/salesforce-experience-cloud
 salesloft:
     categories:
         - marketing
