chore: display job and stage in github action name
Right now you need 3 clicks to find out which stage a service is being
deployed to.
Adding service and stage in the name to make it easier to access this
info

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,5 @@
 name: '[Release] Deploy service'
+run-name: '[Release] [${{ inputs.stage }}] Deploy ${{ inputs.service }}'
 
 on:
     workflow_dispatch:
