--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -456,12 +456,10 @@ chargebee:
         - payment
     auth_mode: BASIC
     proxy:
-        headers:
-            Authorization: Basic ${username}
         base_url: https://${connectionConfig.subdomain}.chargebee.com
         verification:
             method: GET
-            endpoint: /api/v2/customers
+            endpoint: /api/v2/business_entities
         retry:
             after: 'Retry-After'
     docs: https://docs.nango.dev/integrations/all/chargebee
