feat(integrations): add support for chargebee (#2615)
## Describe your changes

- Added configuration for chargebee in providers.yaml
- Added chargebee to docs-v2.
- Added chargebee pages for Supported API groups in mint.json.
- Added chargebee SVG file in template-logos folder.
- Consolidate chargebee docs pages
 
## Test
This provider has been used successfully in local development to connect
to chargebee after authorizing using Nango.
The documentation update was reviewed using `npm run docs` and verifying
on localhost.

---------

Co-authored-by: Thomas Bonnin <233326+TBonnin@users.noreply.github.com>

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -451,6 +451,18 @@ certn-partner:
             method: GET
             endpoint: /api/v2/teams
     docs: https://docs.nango.dev/integrations/all/certn
+chargebee:
+    categories:
+        - payment
+    auth_mode: BASIC
+    proxy:
+        base_url: https://${connectionConfig.subdomain}.chargebee.com
+        verification:
+            method: GET
+            endpoint: /api/v2/business_entities
+        retry:
+            after: 'Retry-After'
+    docs: https://docs.nango.dev/integrations/all/chargebee
 checkr-partner:
     categories:
         - legal
