--- a/.github/workflows/build-image-reusable.yaml
+++ b/.github/workflows/build-image-reusable.yaml
@@ -24,8 +24,10 @@ jobs:
 
         runs-on: ubuntu-latest
         env:
-            CAN_PUSH: "${{ secrets.DOCKER_PASSWORD != ' && secrets.DOCKER_USERNAME != ' }}"
+            CAN_PUSH: "${{ secrets.DOCKER_PASSWORD != '' && secrets.DOCKER_USERNAME != '' }}"
             SHA: ${{ github.event.pull_request.head.sha || github.sha }}
+            # If you're forking this repo, remember to set DOCKER_REPO_LINK to your docker repo link
+            REPO_LINK: "${{ secrets.DOCKER_REPO_LINK != '' && secrets.DOCKER_REPO_LINK || 'nangohq/nango' }}"
 
         steps:
             - name: Check out
@@ -52,9 +54,9 @@ jobs:
               run: |
                   export SENTRY_KEY=${{ secrets[inputs.key_for_sentry_secret] }}
                   export POSTHOG_KEY=${{ secrets[inputs.key_for_posthog_secret] }}
-                  docker buildx build --platform linux/amd64,linux/arm64 -t nangohq/nango:${{ inputs.name }}-${{ env.SHA }} --push .
+                  docker buildx build --platform linux/amd64,linux/arm64 -t ${{ env.REPO_LINK }}:${{ inputs.name }}-${{ env.SHA }} --push .
 
             - name: Push image
               if: env.CAN_PUSH == 'true'
               run: |
-                  docker push nangohq/nango:${{ inputs.name }}-${{ env.SHA }}
+                  docker push ${{ env.REPO_LINK }}:${{ inputs.name }}-${{ env.SHA }}
