--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -45,6 +45,7 @@
         "@radix-ui/react-popover": "1.0.7",
         "@radix-ui/react-progress": "1.1.0",
         "@radix-ui/react-scroll-area": "1.0.5",
+        "@radix-ui/react-select": "2.1.1",
         "@radix-ui/react-toast": "1.2.1",
         "@radix-ui/react-tooltip": "1.0.7",
         "@sentry/react": "8.7.0",
