feat(integrations): add support for builder.io (#2637)
## Describe your changes

- Add support for Builder.io

## Issue ticket number and link

[EXT-128](https://linear.app/nango/issue/EXT-128/add-support-for-builderio)

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -407,6 +407,28 @@ brex-staging:
     proxy:
         base_url: https://platform.staging.brexapis.com
     docs: https://docs.nango.dev/integrations/all/brex
+builder-io-private:
+    categories:
+        - dev-tools
+        - design
+        - cms
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://${connectionConfig.domain}
+        headers:
+            Authorization: Bearer ${apiKey}
+    docs: https://docs.nango.dev/integrations/all/builder-io
+builder-io-public:
+    categories:
+        - dev-tools
+        - design
+        - cms
+    auth_mode: API_KEY
+    proxy:
+        base_url: https://${connectionConfig.domain}
+        query:
+            apiKey: ${apiKey}
+    docs: https://docs.nango.dev/integrations/all/builder-io
 calendly:
     categories:
         - productivity
