--- a/package.json
+++ b/package.json
@@ -67,11 +67,11 @@
         "dev:docker": "docker compose --file dev/docker-compose.dev.yaml up -d"
     },
     "devDependencies": {
-        "@tsconfig/node18-strictest-esm": "^1.0.1",
+        "@tsconfig/node18-strictest-esm": "1.0.1",
         "@types/node": "20.12.2",
         "@typescript-eslint/eslint-plugin": "7.7.1",
         "@typescript-eslint/parser": "7.7.1",
-        "concurrently": "^8.2.2",
+        "concurrently": "8.2.2",
         "eslint": "8.56.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-import": "2.29.1",
@@ -85,8 +85,8 @@
         "onchange": "7.1.0",
         "prettier": "3.3.3",
         "rimraf": "6.0.1",
-        "testcontainers": "^9.12.0",
-        "tsx": "^4.19.0",
+        "testcontainers": "9.12.0",
+        "tsx": "4.19.0",
         "typescript": "5.3.3",
         "vitest": "1.6.0",
         "zx": "8.1.4"
