--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -27,7 +27,7 @@
         "@nangohq/webhooks": "file:../webhooks",
         "axios": "^1.7.4",
         "dd-trace": "5.21.0",
-        "dotenv": "^16.0.3",
+        "dotenv": "16.0.3",
         "get-port": "7.1.0",
         "express": "4.19.2",
         "node-cron": "3.0.3",
