--- a/packages/records/package.json
+++ b/packages/records/package.json
@@ -25,7 +25,7 @@
         "uuid": "9.0.1"
     },
     "devDependencies": {
-        "@types/md5": "^2.3.2",
+        "@types/md5": "2.3.2",
         "vitest": "1.6.0"
     }
 }
