--- a/packages/webhooks/package.json
+++ b/packages/webhooks/package.json
@@ -18,12 +18,12 @@
         "@nangohq/logs": "file:../logs",
         "@nangohq/utils": "file:../utils",
         "axios": "^1.7.4",
-        "dayjs": "^1.11.7",
-        "dayjs-plugin-utc": "^0.1.2"
+        "dayjs": "1.11.7",
+        "dayjs-plugin-utc": "0.1.2"
     },
     "devDependencies": {
         "@nangohq/types": "file:../types",
-        "typescript": "^5.3.3",
+        "typescript": "5.3.3",
         "vitest": "1.6.0"
     },
     "files": [
