fix(deps): manual upgrade (#2647)
## Describe your changes

- Manually upgrade some dependencies 
Mostly dev deps and inconsequential upgrade.

- Upgraded: soap that fixes a CVE
- Upgraded: Webpack that fixes a CVE
- Upgraded: BotBuilder that fixes a CVE

--- a/packages/jobs/package.json
+++ b/packages/jobs/package.json
@@ -26,18 +26,18 @@
         "@nangohq/utils": "file:../utils",
         "@nangohq/webhooks": "file:../webhooks",
         "axios": "^1.7.4",
-        "dd-trace": "5.2.0",
-        "dotenv": "^16.0.3",
+        "dd-trace": "5.21.0",
+        "dotenv": "16.0.3",
         "get-port": "7.1.0",
         "express": "4.19.2",
         "node-cron": "3.0.3",
-        "zod": "^3.22.4"
+        "zod": "3.23.8"
     },
     "devDependencies": {
         "@types/node": "^20.12.2",
         "nodemon": "^3.0.1",
         "typescript": "5.3.3",
-        "type-fest": "4.14.0",
+        "type-fest": "4.25.0",
         "vitest": "1.6.0"
     }
 }
