--- a/package.json
+++ b/package.json
@@ -67,29 +67,29 @@
         "dev:docker": "docker compose --file dev/docker-compose.dev.yaml up -d"
     },
     "devDependencies": {
-        "@tsconfig/node18-strictest-esm": "^1.0.1",
+        "@tsconfig/node18-strictest-esm": "1.0.1",
         "@types/node": "20.12.2",
         "@typescript-eslint/eslint-plugin": "7.7.1",
         "@typescript-eslint/parser": "7.7.1",
-        "concurrently": "^8.0.1",
+        "concurrently": "8.2.2",
         "eslint": "8.56.0",
         "eslint-config-prettier": "9.1.0",
         "eslint-plugin-import": "2.29.1",
         "eslint-plugin-prettier": "5.1.3",
         "eslint-plugin-react": "7.33.2",
         "eslint-plugin-react-hooks": "4.6.0",
-        "git-cliff": "2.2.1",
+        "git-cliff": "2.5.0",
         "husky": "8.0.3",
         "js-yaml": "4.1.0",
         "lint-staged": "15.2.9",
         "onchange": "7.1.0",
-        "prettier": "3.2.5",
-        "rimraf": "5.0.1",
-        "testcontainers": "^9.12.0",
-        "tsx": "^4.16.2",
+        "prettier": "3.3.3",
+        "rimraf": "6.0.1",
+        "testcontainers": "9.12.0",
+        "tsx": "4.19.0",
         "typescript": "5.3.3",
         "vitest": "1.6.0",
-        "zx": "8.0.2"
+        "zx": "8.1.4"
     },
     "lint-staged": {
         "*.{js,jsx,ts,tsx,cjs}": [
