--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,55 +32,55 @@
         "@nangohq/types": "file:../types",
         "@nangohq/utils": "file:../utils",
         "@nangohq/webhooks": "file:../webhooks",
-        "@workos-inc/node": "^6.2.0",
+        "@workos-inc/node": "6.2.0",
         "axios": "^1.7.4",
         "body-parser": "1.20.2",
         "connect-session-knex": "4.0.0",
-        "cookie-parser": "^1.4.6",
-        "cors": "^2.8.5",
-        "dd-trace": "5.2.0",
-        "dotenv": "^16.0.3",
-        "exponential-backoff": "^3.1.1",
-        "express": "^4.19.2",
-        "express-session": "^1.17.3",
-        "form-data": "^4.0.0",
+        "cookie-parser": "1.4.6",
+        "cors": "2.8.5",
+        "dd-trace": "5.21.0",
+        "dotenv": "16.0.3",
+        "exponential-backoff": "3.1.1",
+        "express": "4.19.2",
+        "express-session": "1.17.3",
+        "form-data": "4.0.0",
         "helmet": "7.1.0",
-        "jsonwebtoken": "^9.0.2",
-        "lodash-es": "^4.17.21",
-        "mailgun.js": "^8.2.1",
-        "multer": "^1.4.5-lts.1",
-        "node-cron": "^3.0.2",
-        "oauth": "^0.10.0",
-        "passport": "^0.6.0",
-        "passport-http": "^0.3.0",
-        "passport-local": "^1.0.0",
+        "jsonwebtoken": "9.0.2",
+        "lodash-es": "4.17.21",
+        "mailgun.js": "8.2.1",
+        "multer": "1.4.5-lts.1",
+        "node-cron": "3.0.2",
+        "oauth": "0.10.0",
+        "passport": "0.6.0",
+        "passport-http": "0.3.0",
+        "passport-local": "1.0.0",
         "rate-limiter-flexible": "5.0.3",
         "redis": "4.6.13",
         "simple-oauth2": "5.1.0",
-        "uuid": "^9.0.0",
+        "uuid": "9.0.0",
         "ws": "8.18.0",
-        "zod": "3.22.4"
+        "zod": "3.23.8"
     },
     "devDependencies": {
-        "@types/cookie-parser": "^1.4.3",
-        "@types/cors": "^2.8.12",
-        "@types/express": "^4.17.13",
-        "@types/express-session": "^1.17.6",
-        "@types/jsonwebtoken": "^9.0.1",
-        "@types/lodash-es": "^4.17.10",
-        "@types/multer": "^1.4.11",
+        "@types/cookie-parser": "1.4.3",
+        "@types/cors": "2.8.12",
+        "@types/express": "4.17.13",
+        "@types/express-session": "1.17.6",
+        "@types/jsonwebtoken": "9.0.1",
+        "@types/lodash-es": "4.17.10",
+        "@types/multer": "1.4.11",
         "@types/node": "20.12.2",
-        "@types/node-cron": "^3.0.7",
-        "@types/oauth": "^0.9.1",
-        "@types/passport": "^1.0.12",
-        "@types/passport-http": "^0.3.9",
-        "@types/passport-local": "^1.0.35",
-        "@types/simple-oauth2": "^4.1.1",
-        "@types/uuid": "^8.3.4",
-        "@types/ws": "^8.5.4",
+        "@types/node-cron": "3.0.7",
+        "@types/oauth": "0.9.1",
+        "@types/passport": "1.0.12",
+        "@types/passport-http": "0.3.9",
+        "@types/passport-local": "1.0.35",
+        "@types/simple-oauth2": "4.1.1",
+        "@types/uuid": "8.3.4",
+        "@types/ws": "8.5.4",
         "get-port": "7.1.0",
-        "nodemon": "^3.0.1",
-        "type-fest": "4.14.0",
+        "nodemon": "3.0.1",
+        "type-fest": "4.25.0",
         "typescript": "5.3.3",
         "vitest": "1.6.0"
     }
