[nan-1628] add escape hatch for avoiding encoding params

--- a/packages/shared/providers.yaml
+++ b/packages/shared/providers.yaml
@@ -1180,6 +1180,7 @@ github-app-oauth:
     alias: github
     auth_mode: CUSTOM
     authorization_url: ${connectionConfig.appPublicLink}/installations/new
+    authorization_url_encode: false
     token_url:
         OAUTH2: https://github.com/login/oauth/access_token
         APP: https://api.github.com/app/installations/${connectionConfig.installation_id}/access_tokens
