--- a/packages/persist/package.json
+++ b/packages/persist/package.json
@@ -25,8 +25,7 @@
         "@nangohq/utils": "file:../utils",
         "dd-trace": "5.21.0",
         "express": "^4.19.2",
-        "zod": "3.23.8",
-        "zod-express": "^0.0.8"
+        "zod": "3.23.8"
     },
     "devDependencies": {
         "@types/node": "20.12.2",
