docs: correctly document basic auth

--- a/.env.example
+++ b/.env.example
@@ -50,7 +50,9 @@ CSP_REPORT_ONLY=false
 #
 #
 # - Configure the username and password for securing Nango's dashboard.
+# Uncommenting those env vars will disable regular login, signup and enable basic auth protection.
 #
+# FLAG_AUTH_ENABLED=false
 # NANGO_DASHBOARD_USERNAME=<PICK-A-USERNAME>
 # NANGO_DASHBOARD_PASSWORD=<PICK-A-PASSWORD>
 #
