--- a/integration-templates/cal-com-v2/nango.yaml
+++ b/integration-templates/cal-com-v2/nango.yaml
@@ -3,12 +3,14 @@ integrations:
         syncs:
             events:
                 sync_type: full
+                track_deletes: true
                 runs: every hour
                 endpoint: GET /events
                 output: Event
                 description: Retrieve all upcoming events per a user
             event-types:
                 sync_type: full
+                track_deletes: true
                 runs: every hour
                 endpoint: GET /event/types
                 output: EventType
@@ -16,7 +18,7 @@ integrations:
 
 models:
     EventType:
-        id: number
+        id: string
         teamId: null | number
         schedulingType: null | string
         userId: number
@@ -107,7 +109,7 @@ models:
         locale: string
         bookingId: number
     Event:
-        id: number
+        id: string
         title: string
         userPrimaryEmail: string
         description: string
