--- a/integration-templates/cal-com-v2/nango.yaml
+++ b/integration-templates/cal-com-v2/nango.yaml
@@ -23,7 +23,7 @@ models:
         schedulingType: null | string
         userId: number
         metadata:
-            ___string: any
+            __string: any
         description: string | null
         hidden: boolean
         slug: string
@@ -92,14 +92,14 @@ models:
                 slug: string
                 name: string
                 metadata:
-                    ___string: any
+                    __string: any
             upId: string
             image: string
             brandColor: string
             darkBrandColor: string
             theme: string
             bookerLayouts:
-                ___string: any
+                __string: any
         bookerUrl: string
     Attendee:
         id: number
@@ -114,12 +114,12 @@ models:
         userPrimaryEmail: string
         description: string
         customInputs:
-            ___string: any
+            __string: any
         startTime: string
         endTime: string
         attendees: Attendee[]
         metadata:
-            ___string: any
+            __string: any
         uid: string
         recurringEventId: string
         location: string
@@ -129,21 +129,21 @@ models:
             eventName: string
             price: number
             recurringEvent:
-                ___string: any
+                __string: any
             currency: string
             metadata:
-                ___string: any
+                __string: any
             seatsShowAttendees:
-                ___string: any
+                __string: any
             seatsShowAvailabilityCount:
-                ___string: any
+                __string: any
             team:
-                ___string: any
+                __string: any
         status:
-            ___string: any
+            __string: any
         paid: boolean
         payment:
-            - ___string: any
+            - __string: any
         references:
             - id: number
               type: string
@@ -155,11 +155,11 @@ models:
               bookingId: number
               externalCalendarId: string
               deleted:
-                  ___string: string
+                  __string: string
               credentialId: number
         isRecorded: boolean
         seatsReferences:
-            - ___string: any
+            - __string: any
         user: User
         rescheduled:
-            ___string: any
+            __string: any
